v0.1.0 Major additions and reworks
- CacheUtils for easier working with cached Users/Members
- MessageUtils
- Parser fix
- Base Commands: ServerInfo, UserInfo, RoleInfo
- Misc Commands: Avatar, Enlarge
- Debug Commands: Dump
- Updated Help and Usage Panels
- Updated all Command usages